Fix sizing of custom-form on smaller screens

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -58,7 +58,7 @@ body, a {
 }
 
 .custom-form {
-    width: 40%; 
+    width: 60%; 
     margin: 1rem auto;
     padding-top: 15vh;
 }
